took out backend password hash on user creation and added user verification resource
